updated according to Many-to-Many