@@ -1,31 +1,24 @@
 package com.lenarsharipov.library.mapper;
 
-import com.lenarsharipov.library.model.author.Author;
-import com.lenarsharipov.library.model.author.CreateAuthorDto;
-import com.lenarsharipov.library.model.author.ReadAuthorDto;
+import com.lenarsharipov.library.dto.author.CreateAuthorDto;
+import com.lenarsharipov.library.dto.author.AuthorDto;
+import com.lenarsharipov.library.model.Author;
 import lombok.experimental.UtilityClass;
 
 import java.util.List;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 @UtilityClass
 public class AuthorMapper {
 
-    public static ReadAuthorDto toDto(Author entity) {
-        return new ReadAuthorDto(entity.getId(), entity.getName());
+    public static AuthorDto toDto(Author author) {
+        return new AuthorDto(author.getId(), author.getName());
     }
 
-    public static List<ReadAuthorDto> toDto(List<Author> list) {
-        return list.stream()
-                .map(a -> new ReadAuthorDto(a.getId(), a.getName()))
-                .toList();
-    }
-
-    public static Set<ReadAuthorDto> toDto(Set<Author> set) {
-        return set.stream()
-                .map(a -> new ReadAuthorDto(a.getId(), a.getName()))
-                .collect(Collectors.toSet());
+    public static List<AuthorDto> toDto(List<Author> authors) {
+        return authors.stream()
+                .map(a -> new AuthorDto(a.getId(), a.getName()))
+                .collect(Collectors.toList());
 
     }
 
@@ -34,5 +27,4 @@ public class AuthorMapper {
                 .name(dto.name())
                 .build();
     }
-
 }
